# cnr

./: .env.example  .gitignore  Cargo.toml  README.md
crates/cnr-cli/: Cargo.toml
crates/cnr-cli/src/: main.rs
crates/cnr-connor/: Cargo.toml
crates/cnr-connor/src/: lib.rs
crates/cnr-core/: Cargo.toml
crates/cnr-core/src/: lib.rs
crates/cnr-discord/: Cargo.toml
crates/cnr-discord/src/: lib.rs  main.rs
crates/cnr-executor/: Cargo.toml
crates/cnr-executor/src/: lib.rs
crates/cnr-manager/: Cargo.toml
crates/cnr-manager/src/: lib.rs
crates/cnr-planner/: Cargo.toml
crates/cnr-planner/src/: lib.rs
crates/cnr-projections/: Cargo.toml
crates/cnr-projections/src/: lib.rs
docs/: ARCHITECTURE.md  LOCAL_SETUP.md
examples/: worker-transcript.md
