[workspace]
members = [
    "crates/cnr-core",
    "crates/cnr-projections",
    "crates/cnr-executor",
    "crates/cnr-planner",
    "crates/cnr-cli",
    "crates/cnr-manager",
    "crates/cnr-connor",
    "crates/cnr-discord",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oswfrans/cnr"

[workspace.dependencies]
anyhow = "1.0"
axial-core = { path = "../axial/crates/axial-core" }
axial-projections = { path = "../axial/crates/axial-projections" }
axial-store = { path = "../axial/crates/axial-store" }
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.12"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "parsing", "serde-well-known"] }
tokio = { version = "1.42", features = ["macros", "process", "rt-multi-thread"] }

