[package]
name = "cnr-executor"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axial-core.workspace = true
axial-store.workspace = true
cnr-core = { path = "../cnr-core" }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true

