[package]
name = "cnr-manager"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axial-core.workspace = true
axial-store.workspace = true
cnr-core = { path = "../cnr-core" }
cnr-executor = { path = "../cnr-executor" }
cnr-planner = { path = "../cnr-planner" }
cnr-projections = { path = "../cnr-projections" }
serde_json.workspace = true

